fix: :lipstick: remove extra space after profile name

--- a/public/resources/scss/index.scss
+++ b/public/resources/scss/index.scss
@@ -3380,11 +3380,6 @@ body {
         font-size: 13px;
     }
 
-    #other_profiles,
-    #stats_for_profile {
-        min-width: 130px;
-    }
-
     .stat-inventory .stat-content {
         padding-left: 0 !important;
         padding-right: 0 !important;
